act: downgrade java 17